# struct_inspector

./: CMakeLists.txt  LICENSE  README.md  main.cpp  struct_inspector.cpp
c/: CMakeLists.txt  binder.c  binder.h  inspector.c  inspector.h  inspector_config.h  inspector_context.c  inspector_context.h  inspector_dsl.c  inspector_dsl.h  main.c  struct_inspector.c  struct_inspector.h
c/example/: CMakeLists.txt
c/example/api_usage/: CMakeLists.txt  iteration.c  update.c  validation.c
c/example/basic/: CMakeLists.txt  arrays_struct.c  basic_struct.c  context_memory.c  nested_struct.c
c/example/features/: CMakeLists.txt  config_persistence_example.c  serialization_example.c  string_query_example.c
c/include/: inspector.h  inspector_config.h  inspector_context.h
c/src/: CMakeLists.txt  inspector_dsl.c
c/test/: CMakeLists.txt  test_context.c  test_dsl.c  test_inspector.c
cpp/: CMakeLists.txt  inspector_dsl.hpp  main.cpp  struct_inspector.hpp
